testsuite/tests/typing-layouts-missing-cmi/test_unboxed_version.compilers.reference
File "test_unboxed_version.ml", line 34, characters 18-20:
34 | let _f : Defs.z = ""
                       ^^
Error: This constant has type string but an expression was expected of type
         Defs.z
